JSW Devsb/src/objects/ABP_District_Level__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Business_Plan_No_Branding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Business Plan No</label>
        <referenceTo>ABP_District_Level__c</referenceTo>
        <relationshipLabel>Annual Bussiness Plan (Annual Business Plan No)</relationshipLabel>
        <relationshipName>Annual_Bussiness_Plan1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Business_Plan_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Business Plan No</label>
        <referenceTo>ABP_District_Level__c</referenceTo>
        <relationshipLabel>Annual Bussiness Plan</relationshipLabel>
        <relationshipName>Annual_Bussiness_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>April_Actual__c</fullName>
        <label>April Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_NSR_PY__c</fullName>
        <label>April NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_NSR__c</fullName>
        <label>April NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Target__c</fullName>
        <label>April Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Actual__c</fullName>
        <label>August Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_NSR_PY__c</fullName>
        <label>August NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_NSR__c</fullName>
        <label>August NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Target__c</fullName>
        <label>August Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Actuals__c</fullName>
        <label>Average Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Target__c</fullName>
        <label>Average Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Day_Gifts__c</fullName>
        <label>Birth Day Gifts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CY_Avg_Volumes__c</fullName>
        <label>CY Avg Volumes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_NSR__c</fullName>
        <label>CY NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caps__c</fullName>
        <label>Caps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Certificate_Get_together__c</fullName>
        <label>Dealer Certificate/Get together</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Kit_per_Quarter__c</fullName>
        <label>Dealer Kit per Quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Shop_Paintings__c</fullName>
        <inlineHelpText>Dealer Shop Paintings ( Sq.ft)Including shutter )</inlineHelpText>
        <label>Dealer Shop Paintings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Actual__c</fullName>
        <label>December Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_NSR_PY__c</fullName>
        <label>December NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_NSR__c</fullName>
        <label>December NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Target__c</fullName>
        <label>December Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deepawali_Gifts__c</fullName>
        <label>Deepawali Gifts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Branding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Annual Bussiness Plan (District)</relationshipLabel>
        <relationshipName>Annual_Bussiness_Plan1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District_Current_Market_Share__c</fullName>
        <label>District Current Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Current_Potential__c</fullName>
        <label>District Current Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Expected_Market_Share__c</fullName>
        <label>District Expected Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Expected_Potential__c</fullName>
        <label>District Expected Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Annual Bussiness Plan</relationshipLabel>
        <relationshipName>Annual_Bussiness_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Sales__c</fullName>
        <label>Existing Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Actual__c</fullName>
        <label>February Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_NSR_PY__c</fullName>
        <label>February NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_NSR__c</fullName>
        <label>February NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Target__c</fullName>
        <label>February Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hoardings__c</fullName>
        <label>Hoardings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Actual__c</fullName>
        <label>January Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_NSR_PY__c</fullName>
        <label>January NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_NSR__c</fullName>
        <label>January NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Target__c</fullName>
        <label>January Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Actual__c</fullName>
        <label>July Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_NSR_PY__c</fullName>
        <label>July NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_NSR__c</fullName>
        <label>July NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Target__c</fullName>
        <label>July Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Actual__c</fullName>
        <label>June Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_NSR_PY__c</fullName>
        <label>June NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_NSR__c</fullName>
        <label>June NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Target__c</fullName>
        <label>June Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Actual__c</fullName>
        <label>March Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_NSR_PY__c</fullName>
        <label>March NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_NSR__c</fullName>
        <label>March NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Target__c</fullName>
        <label>March Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Actual__c</fullName>
        <label>May Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_NSR_PY__c</fullName>
        <label>May NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_NSR__c</fullName>
        <label>May NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Target__c</fullName>
        <label>May Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medians__c</fullName>
        <label>Medians</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Gain_In_Weighted_Average_NSR_PY__c</fullName>
        <label>Net Gain In Weighted Average NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Gain_In_Weighted_Average_NSR__c</fullName>
        <label>Net Gain In Weighted Average NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Year_Calenders__c</fullName>
        <label>New Year Calenders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Year_Dairies__c</fullName>
        <label>New Year Dairies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>November_Actual__c</fullName>
        <label>November Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_NSR_PY__c</fullName>
        <label>November NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_NSR__c</fullName>
        <label>November NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Target__c</fullName>
        <label>November Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Actual__c</fullName>
        <label>October Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_NSR_PY__c</fullName>
        <label>October NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_NSR__c</fullName>
        <label>October NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Target__c</fullName>
        <label>October Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ABP-District Level</relationshipLabel>
        <relationshipName>ABP_District_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_FY17_Monthly_Volumes__c</fullName>
        <label>Projected FY17  Monthly Volumes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_NSR__c</fullName>
        <label>Projected NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Actual__c</fullName>
        <label>September Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_NSR_PY__c</fullName>
        <label>September NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_NSR__c</fullName>
        <label>September NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Target__c</fullName>
        <label>September Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_dealer_Certificate__c</fullName>
        <label>Sub  dealer Certificate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Shirts__c</fullName>
        <label>T Shirts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Actual__c</fullName>
        <label>Total Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Target__c</fullName>
        <label>Total Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Umbrella__c</fullName>
        <label>Umbrella</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wall_Paintings_and_High_rise_Sq_ft__c</fullName>
        <label>Wall Paintings  and High rise (Sq.ft )</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Average_NSR_PY__c</fullName>
        <label>Weighted Average NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Average_NSR__c</fullName>
        <label>Weighted Average NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Date</type>
    </fields>
    <label>Annual Bussiness Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ABP-District Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual Bussiness Plan</pluralLabel>
    <recordTypes>
        <fullName>Branding_ABP</fullName>
        <active>true</active>
        <label>Branding ABP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Trade_ABP</fullName>
        <active>true</active>
        <label>Non-Trade ABP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade_ABP</fullName>
        <active>true</active>
        <label>Trade ABP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>